assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Trispace:wght@100;200;300;400;500;600;700;800&display=swap');

/* --- Colors --- */

body {
    background-color: #06283D;
}

a {
    color: #57BCFF;
}
/* --- General Styling --- */

.active {
    text-decoration: underline;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Space Mono', monospace;
    color: #57BCFF
}

p {
    font-family: Trispace, sans-serif;
    color: #DFF6FF;
}

.uppercase {
    text-transform: uppercase;
}

.general-heading {
    font-family: 'Space Mono', monospace;
    color: #57BCFF;
}

/* --- Navbar --- */

.navbar,
.navbar-brand,
.nav-link {
    background-color: #06283D;
    color: #57bcfff3;
    letter-spacing: 1px;
}

.navbar-brand {
    font-weight: bold;
    font-size: 36px;
    font-family: 'Space Mono', monospace;
}

.nav-link {
    font-size: 18px;
    font-family: Trispace, sans-serif;
}

.text-right {
    text-align: right;
}

/* --- Footer --- */

footer {
    margin: 25px 0px 0px 0px;
}

.footer-content h1 {
    font-size: 14px;
}

.footer-content p,
.footer-content ul li {
    font-size: 12px;
}

.footer-about {
    text-align: left;
}

.footer-contact {
    text-align: center;
}

.footer-pdf {
    text-align: right;
}

.footer-pdf a {
    text-decoration: none;
}

.footer-contact ul li a i {
    font-size: 18px;
}

/* --- About Me --- */

.about-image {
    display: block;
    margin: 10px auto;
    width: 360px;
    height: 360px;
}

.about-info {
    margin: 15px 0px;
}

/* --------------------------- Resume */
.skill-set h1,
.work-history h1 {
    margin-bottom: 40px;
}

.timeline {
    border-left: 1px solid #DFF6FF;
    position: relative;
    list-style: none;
}

.timeline .timeline-item {
    position: relative;
}

.timeline .timeline-item:after {
    position: absolute;
    display: block;
    top: 0;
    background-color: #DFF6FF;
    left: -38px;
    border-radius: 50%;
    height: 13px;
    width: 13px;
    content: "";
}

.timeline-item h1 {
    font-size: 26px;
}


/* --------------------------- Projects */

.contact-link {
    text-decoration: none;
    color: #57BCFF
}

.project-heading {
    font-size: 24px;
    margin: 25px 0;
}

.project-text {
    text-align: center;
    padding: 25px 0;
}
/* --------------------------- Contact  */
.center-form {
    max-width: 70%;
    padding: 10px 10px;
    margin-left: auto;
    margin-right: auto;
}

.center-form form label {
    color:#DFF6FF;
    font-family: Trispace, sans-serif;
    padding-bottom: 5px;
    padding-top: 15px;
}

.btn {
    margin-top: 15px;
    margin-bottom: 20px;
    color: #57BCFF;
    background-color: #06283D;
}

.btn:hover {
    background-color: #57BCFF;
    color: #06283D;
}

input {
    display: inline-block;
    margin: 10px 10px;
}

/* --------------------------- Media Queries */

@media (max-width: 768px) {
    .navbar-brand {
        font-size: 24px;
    }

    .nav-link {
        font-size: 16px;
    }
}

/* When Navbar is above 768px, margin-right of 100.33px is applied to offset navbar-brand element.*/

@media (min-width: 768px) {
    .navbar-expand-md .navbar-collapse {
        margin-right: 100.33px;
    }

    .center-form {
        max-width: 40%;
    }   
}

